--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,79 +1,62 @@
-name: Deploy to GAE
+name: Build and Deploy to Cloud Run
 
-# Controls when the workflow will run
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+env:
+  PROJECT_ID: ${{ secrets.PROJECT_ID }}
+  RUN_REGION: us-central1
+  SERVICE_NAME: training-task-nimra
+  SECRET_KEY: ${{ secrets.DJANGO_SECRET }}
+  DB_NAME: ${{ secrets.DB_NAME }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASS: ${{ secrets.DB_PASS }}
+  INSTANCE_NAME: ${{ secrets.INSTANCE_NAME }}
+  SOCKET_NAME: ${{ secrets.SOCKET_NAME}}
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  deploy:
-    name: Deploying to Google Cloud
+  setup-build-deploy:
+    name: Setup, Build, and Deploy
     runs-on: ubuntu-latest
-    ##### ANY SECRETS WHICH ARE TO BE SET AS ENV's ON UBUNTU LATEST IMAGE BEFORE DEPLOYMENT, THIS DOESNOT SET ENV's FOR APP ENGINE
-    env:
-      DB_NAME_NIMRA: ${{ secrets.DB_NAME_NIMRA }}
-      DB_USER_NIMRA: ${{ secrets.DB_USER_NIMRA }}
-      DB_PWD_NIMRA: ${{ secrets.DB_PWD_NIMRA }}
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      # DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-    #   GOOGLE_APP_CLIENT_ID: ${{ secrets.GOOGLE_APP_CLIENT_SECRET }}
-    #   GOOGLE_APP_KEY: ${{ secrets.GOOGLE_APP_KEY }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      ##### CREATE RUNTIME ENV FILE FOR DEPLOYMENT, AND ADD SERVICE-ACCOUNT-KEY.json IF NEEDED
-      - name: Creating Runtime .env and add service-account-key
-        run: |
-          touch .env
-          echo  DB_NAME_NIMRA="${{ secrets.DB_NAME_NIMRA }}" >> .env
-          echo  DB_USER_NIMRA="${{ secrets.DB_USER_NIMRA }}" >> .env
-          echo  DB_PWD_NIMRA="${{ secrets.DB_PWD_NIMRA }}" >> .env
-          echo  SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
-          echo  DB_PORT_NIMRA="${{ secrets.DB_PORT_NIMRA }}" >> .env
-          echo  DB_HOST_NIMRA="${{ secrets.DB_HOST_NIMRA }}" >> .env
-      #     echo  BUCKET="${{ secrets.BUCKET }}" >> .env
-      #     echo  GOOGLE_APPLICATION_CREDENTIALS="./service-account-key.json"
-      #     touch service-account-key.json
-      #     echo "${{ secrets.GLOUD_FIRESTORE_KEY }}" >> service-account-key.json
 
-      - name: Setup python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.8"
-      - name: Install Requirements
-        run: pip install -r requirements.txt
-
+      # Setup gcloud CLI
       - name: Connect to gcloud
         uses: google-github-actions/setup-gcloud@v0
         with:
-          project_id: ${{ secrets.PROJECT_ID_NIMRA }}
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_NIMRA }}
-          export_default_credentials: true
-      - name: Gather Static Files
-        run: python manage.py collectstatic --noinput
+          service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
+          project_id: ${{ secrets.PROJECT_ID }}
 
-      ### CREATE RUNTIME MIGRATIONS, THIS MAY CAUSE SOME ERRORS IF MIGRATIONS FOLDER IS NOT MAINTAINED, REMOVE MIGRATIONS FOLDER NAME FROM .gitignore
+      # Build and push image to Google Container Registry
+      # - name: Delete-Image
+      #   run: |-
+      #     gcloud auth configure-docker
+      #     gcloud container images delete gcr.io/$PROJECT_ID/$SERVICE_NAME:Latest --quiet
 
-      # - name: Get Cloud SQL Proxy
-      #   run: |
-      #     wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
-      #     chmod +x cloud_sql_proxy
-      # - name: Run Migrations
-      #   run: |
-      #       python manage.py makemigrations
-      #       python manage.py migrate
+      - name: Build
+        run: |-
+          gcloud builds submit \
+            --quiet \
+            --tag "gcr.io/$PROJECT_ID/$SERVICE_NAME:Latest"
 
-      - name: Deploy to App Engine
-        id: deploy
-        uses: google-github-actions/deploy-appengine@v0.2.0
-        with:
-          deliverables: app.yaml
-          version: v1
-          project_id: ${{ secrets.PROJECT_ID_NIMRA }}
-          credentials: ${{ secrets.SERVICE_ACCOUNT_NIMRA }}
+      # Deploy image to Cloud Run
+      - name: Deploy
+        run: |-
+          gcloud run deploy "$SERVICE_NAME" \
+            --quiet \
+            --region "$RUN_REGION" \
+            --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:Latest" \
+            --platform "managed" \
+            --allow-unauthenticated \
+            --set-env-vars "DJANGO_SECRET=$SECRET_KEY" \
+            --set-env-vars "INSTANCE_UNIX_SOCKET=$SOCKET_NAME" \
+            --set-env-vars "INSTANCE_CONNECTION_NAME=$INSTANCE_NAME" \
+            --set-env-vars "SOCKET_NAME=$SOCKET_NAME" \
+            --set-env-vars "DB_NAME=$DB_NAME" \
+            --set-env-vars "DB_USER=$DB_USER" \
+            --set-env-vars "DB_PASS=$DB_PASS"
